Fix logo overlap positioning defect on hero

--- a/_scss/components/_hero.scss
+++ b/_scss/components/_hero.scss
@@ -40,7 +40,8 @@
     min-width: 32px;
     position: absolute;
     top: 2em;
-    left: -10.5em;
+    left: 0em;
+    transform: translateX(-110%);
   }
 }
 
